added aria lables for accesiblity

--- a/index.html
+++ b/index.html
@@ -1087,27 +1087,27 @@
             <!-- Social Media Links -->
             <div style="margin-bottom: 20px;">
               <h2>Follow Us</h2>
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-google"></a>
-              <a href="#" class="fa fa-linkedin"></a>
-              <a href="https://www.youtube.com/@unlim8tedstudioproductions" class="fa fa-youtube"></a>
-              <a href="#" class="fa fa-instagram"></a>
-              <a href="#" class="fa fa-pinterest"></a>
-              <a href="#" class="fa fa-snapchat-ghost"></a>
-              <a href="#" class="fa fa-skype"></a>
-              <a href="#" class="fa fa-android"></a>
-              <a href="#" class="fa fa-dribbble"></a>
-              <a href="#" class="fa fa-vimeo"></a>
-              <a href="#" class="fa fa-tumblr"></a>
-              <a href="#" class="fa fa-vine"></a>
-              <a href="#" class="fa fa-foursquare"></a>
-              <a href="#" class="fa fa-stumbleupon"></a>
-              <a href="#" class="fa fa-flickr"></a>
-              <a href="#" class="fa fa-yahoo"></a>
+              <a href="#" aria-label="facebook social link" class="fa fa-facebook"></a>
+              <a href="#" aria-label="twitter social link" class="fa fa-twitter"></a>
+              <a href="#" aria-label="google social link" class="fa fa-google"></a>
+              <a href="#" aria-label="linked in social link" class="fa fa-linkedin"></a>
+              <a href="https://www.youtube.com/@unlim8tedstudioproductions" aria-label="youtube social link" class="fa fa-youtube"></a>
+              <a href="#" aria-label="instagram social link" class="fa fa-instagram"></a>
+              <a href="#" aria-label="pinterest social link" class="fa fa-pinterest"></a>
+              <a href="#" aria-label="snapchat social link" class="fa fa-snapchat-ghost"></a>
+              <a href="#" aria-label="skype social link" class="fa fa-skype"></a>
+              <a href="#" aria-label="android social link" class="fa fa-android"></a>
+              <a href="#" aria-label="dribbble social link" class="fa fa-dribbble"></a>
+              <a href="#" aria-label="vimeo social link" class="fa fa-vimeo"></a>
+              <a href="#" aria-label="tumblr social link" class="fa fa-tumblr"></a>
+              <a href="#" aria-label="line social link" class="fa fa-vine"></a>
+              <a href="#" aria-label="foursquare social link" class="fa fa-foursquare"></a>
+              <a href="#" aria-label="stumbleupon social link" class="fa fa-stumbleupon"></a>
+              <a href="#" aria-label="flickr social link" class="fa fa-flickr"></a>
+              <a href="#" aria-label="yahoo social link" class="fa fa-yahoo"></a>
               <a href="https://www.reddit.com/user/Unlim8tedStudios/" class="fa fa-reddit"></a>
-              <a href="#" class="fa fa-rss"></a>
-              <a href="https://github.com/Unlim8ted-Studio-Productions" class="fa fa-github"></a>
+              <a href="#" aria-label="rss social link" class="fa fa-rss"></a>
+              <a href="https://github.com/Unlim8ted-Studio-Productions" aria-label="github social link" class="fa fa-github"></a>
 
             </div>
             <!-- Newsletter Signup -->
