--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@
         <h3>The Life of a Meatball</h3>
       </a>
       <a href="products#theglitch" class="item-box" data-category="short">
-        <img src="images\products\films\The Glitch.jpg" alt="The Glitch">
+        <img src="images\products\films\TheGlitchCover.png" alt="The Glitch">
         <h3>The Glitch</h3>
       </a>
       <a href="products" class="item-box" data-category="adventure">
