--- a/square-pixels.html
+++ b/square-pixels.html
@@ -518,7 +518,7 @@
   </ol>
   <p>For detailed installation instructions, consult the Installation Guide.</p>
   <p> You can also download the latest executable version from the releases page. For help with the built version of the
-    code you can contact our support team at support-team@unlim8ted.com.
+    code you can contact our support team at support@unlim8ted.com.
   </p>
   <h2 id="how-to-play">How to Play</h2>
   <p><strong>Controls:</strong></p>
