new products and additional videos

--- a/index.html
+++ b/index.html
@@ -1347,6 +1347,11 @@
         <h2>Music</h2>
         <p>Listen to our newest music releases.</p>
       </a>
+      <a href="#podcasts" class="product-box">
+        <img src="images/products/podcast-image.jpg" alt="Podcast">
+        <h2>Podcasts</h2>
+        <p>Listen to our newest podcasts.</p>
+      </a>
       <a href="#books" class="product-box">
         <img src="images/products/books-image.jpg" alt="Books">
         <h2>Books</h2>
@@ -1825,6 +1830,11 @@
       <a href="products#Easy-Pygame-UI-Creator" class="item-box" data-category="productivity">
         <img src="images/products/easy_pygame_ui-maker.jpg" alt="Easy pygame UI Maker">
         <h3>Easy pygame UI Creator</h3>
+      </a>
+
+      <a href="products#Copy-Keyframes-to-Selected-Blender-Addon" class="item-box" data-category="productivity">
+        <img src="images/products/Copy-Keyframes-to-Selected-Blender-Addon.jpg" alt="Copy Keyframes to Selected Blender Addon">
+        <h3>Copy Keyframes to Selected Blender Addon</h3>
       </a>
 
       <a href="products#ChatApp" class="item-box" data-category="all">
