fixed product and add nothign here

--- a/index.html
+++ b/index.html
@@ -1649,10 +1649,11 @@
         <img src="images\products\films\TheGlitchCover.png" alt="The Glitch">
         <h3>The Glitch</h3>
       </a>
+      <!--
       <a href="products" class="item-box" data-category="adventure">
         <img src="images/products/adventure-film.jpg" alt="Adventure Film">
         <h3>Adventure Film</h3>
-      </a>
+      </a>-->
       <!-- Add more film items here -->
     </div>
     <!-- Copyright -->
@@ -1674,6 +1675,10 @@
       </select>
     </div>
     <div class="item-category" id="music-items">
+      <h2>nothing to see here yet...</h2>
+      <h2>Check back later in case what you were loooking for was just hiding</h2>
+
+      <!--
       <a href="products" class="item-box" data-category="rock">
         <img src="images/products/rock-music.jpg" alt="Rock Music">
         <h3>Rock Album</h3>
@@ -1682,6 +1687,41 @@
         <img src="images/products/pop-music.jpg" alt="Pop Music">
         <h3>Pop Album</h3>
       </a>
+    -->
+      <!-- Add more music items here -->
+    </div>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+    </div>
+  </div>
+  </div>
+
+  <div id="podcasts" class="content-section">
+    <h1>Podcasts</h1>
+    <div class="search-bar">
+      <input type="text" id="podcast-search" placeholder="Search podcasts...">
+      <select id="podcast-filter">
+        <option value="all">All</option>
+        <option value="informational">Informational</option>
+        <option value="fiction">Fictional</option>
+        <!-- Add more filter options as needed -->
+      </select>
+    </div>
+    <div class="item-category" id="music-items">
+      <h2>nothing to see here yet...</h2>
+      <h2>Check back later in case what you were loooking for was just hiding</h2>
+
+      <!--
+      <a href="products" class="item-box" data-category="rock">
+        <img src="images/products/rock-music.jpg" alt="Rock Music">
+        <h3>Rock Album</h3>
+      </a>
+      <a href="products" class="item-box" data-category="pop">
+        <img src="images/products/pop-music.jpg" alt="Pop Music">
+        <h3>Pop Album</h3>
+      </a>
+    -->
       <!-- Add more music items here -->
     </div>
     <!-- Copyright -->
