--- a/index.html
+++ b/index.html
@@ -246,6 +246,18 @@
 
   <link rel="stylesheet" href="styles.css">
   <style>
+    a.button {
+      color: #8b00ff;
+      text-decoration: none;
+      font-weight: bold;
+      background: black;
+      border: 2px solid #8b00ff;
+      padding: 15px 25px;
+      font-size: 18px;
+      border-radius: 8px;
+      display: inline-block;
+      margin-top: 20px;
+  }
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
@@ -2020,6 +2032,7 @@
       content. We specialize in a wide range of productions, from film and animation to digital art and beyond.</p>
     <p>Our mission is to bring stories to life and provide unique entertainment experiences for audiences around the
       world.</p>
+      <a class="button" href="/about-us">Find Out More</a>
     <!-- Copyright -->
     <div style="margin-top: 100px;">
       <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
