--- a/about-us.html
+++ b/about-us.html
@@ -671,6 +671,11 @@
         <p>Our motto, "The sky is not the limit... We are, meaning there is no limit," reflects our commitment to limitless exploration and creativity in entertainment. We envision a future where the boundaries between gaming, storytelling, and technology are blurred, creating fully immersive and engaging experiences for audiences around the world.</p>
 
         <a href="/#contact" class="button">Contact Us</a>
+            <!-- Copyright -->
+    <div style="margin-top: 20px;">
+      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+    </div>
+
     </div>
 
     <!-- Custom cursor element -->
