--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
         <h2>Music</h2>
         <p>Listen to our newest music releases.</p>
       </a>
-      <a href="#podcasts" class="product-box">
+      <a href="/podcasts" class="product-box">
         <img src="images/products/podcast-image.jpg" alt="Podcast">
         <h2>Podcasts</h2>
         <p>Listen to our newest podcasts.</p>
