--- a/podcasts.html
+++ b/podcasts.html
@@ -455,13 +455,13 @@
             cursor: pointer;
             font-size: 16px;
         }
-
         .time-bar {
             flex-grow: 1;
             height: 5px;
             margin: 0 20px;
             background: #ddd;
             position: relative;
+            cursor: pointer;
         }
 
         .time-bar-fill {
@@ -471,6 +471,15 @@
             position: absolute;
             top: 0;
             left: 0;
+        }
+
+        .time-bar-hover-line {
+            height: 100%;
+            width: 2px;
+            background: rgba(255, 255, 255, 0.8);
+            position: absolute;
+            top: 0;
+            pointer-events: none;
         }
 
         .volume-container {
@@ -530,6 +539,10 @@
                 <div class="podcast-title">Computers</div>
                 <div class="podcast-description">Exploring computers throughout history and how the modern computer came to be.</div>
             </div>
+            <div class="podcast-card" onclick="playPodcast('Guide to the Zipper Economy.wav')">
+                <div class="podcast-title">Guide to the Zipper Economy</div>
+                <div class="podcast-description">A review of the 2024 "Guide to the Zipper Economy".</div>
+            </div>
         </div>
 
         <!-- Copyright -->
@@ -541,8 +554,9 @@
     <!-- Player controls -->
     <div class="player-controls">
         <button class="play-button" onclick="togglePlayPause()">Play</button>
-        <div class="time-bar">
+        <div class="time-bar" onmousemove="showHoverLine(event)" onmouseleave="hideHoverLine()" onclick="setPlaybackPosition(event)">
             <div class="time-bar-fill" id="timeBarFill"></div>
+            <div class="time-bar-hover-line" id="timeBarHoverLine"></div>
         </div>
         <div class="volume-container">
             <span class="volume-icon">&#128266;</span>
@@ -596,6 +610,30 @@
             const percentage = (audio.currentTime / audio.duration) * 100;
             document.getElementById('timeBarFill').style.width = `${percentage}%`;
         });
+
+        // Set playback position based on user click
+        function setPlaybackPosition(event) {
+            const timeBar = document.querySelector('.time-bar');
+            const clickPosition = event.offsetX;
+            const barWidth = timeBar.clientWidth;
+            const clickPercentage = clickPosition / barWidth;
+            audio.currentTime = clickPercentage * audio.duration;
+        }
+
+        // Show hover line on time bar
+        function showHoverLine(event) {
+            const timeBar = document.querySelector('.time-bar');
+            const hoverLine = document.getElementById('timeBarHoverLine');
+            const hoverPosition = event.offsetX;
+            hoverLine.style.left = `${hoverPosition}px`;
+            hoverLine.style.width = '2px';
+        }
+
+        // Hide hover line when mouse leaves the time bar
+        function hideHoverLine() {
+            const hoverLine = document.getElementById('timeBarHoverLine');
+            hoverLine.style.width = '0';
+        }
     </script>
 </body>
 </html>
