added other images

--- a/index.html
+++ b/index.html
@@ -1355,17 +1355,17 @@
         <p>Explore our latest films.</p>
       </a>
       <a href="#music" class="product-box">
-        <img src="images/products/music-image.jpg" alt="Music">
+        <img src="images\products\music\music icon.png" alt="Music">
         <h2>Music</h2>
         <p>Listen to our newest music releases.</p>
       </a>
       <a href="/podcasts" class="product-box">
-        <img src="images/products/podcast-image.jpg" alt="Podcast">
+        <img src="images\products\podcasts\podcasts icon.png" alt="Podcast">
         <h2>Podcasts</h2>
         <p>Listen to our newest podcasts.</p>
       </a>
       <a href="#books" class="product-box">
-        <img src="images/products/books-image.jpg" alt="Books">
+        <img src="images/products/books/book icon.png" alt="Books">
         <h2>Books</h2>
         <p>Read our latest books.</p>
       </a>
@@ -1387,7 +1387,7 @@
         <p>Explore our apps and video games.</p>
       </a>
       <a href="#AI" class="product-box">
-        <img src="images/products/ai-image.jpg" alt="AI">
+        <img src="images/products/ai/ai icon.png" alt="AI">
         <h2>AI</h2>
         <p>Explore our AI products.</p>
       </a>
