--- a/index.html
+++ b/index.html
@@ -1769,6 +1769,10 @@
         <img src="images/products/rock-music.jpg" alt="">
         <h3>Puzzle Square 2</h3>
       </a>
+      <a href="/air-hockey" class="item-box" data-category="online">
+        <img src="images/products/rock-music.jpg" alt="">
+        <h3>Air Hockey Online</h3>
+      </a>
       <a href="products#life" class="item-box" data-category="card games">
         <img src="images/products/pop-music.jpg" alt="">
         <h3>life</h3>
