added more images

--- a/index.html
+++ b/index.html
@@ -1762,19 +1762,19 @@
         <h3>The Life of a Meatball Puzzle</h3>
       </a>
       <a href="/puzzle-squares" class="item-box" data-category="puzzles">
-        <img src="images/products/rock-music.jpg" alt="">
+        <img src="\images\products\games\puzzle-square-preview.png" alt="">
         <h3>Puzzle Square 1</h3>
       </a>
       <a href="/puzzle-squares" class="item-box" data-category="puzzles">
-        <img src="images/products/rock-music.jpg" alt="">
+        <img src="\images\products\games\puzzle-square-preview.png" alt="">
         <h3>Puzzle Square 2</h3>
       </a>
       <a href="/air-hockey" class="item-box" data-category="online">
-        <img src="images/products/rock-music.jpg" alt="">
+        <img src="\images\products\games\air-hockey-preview.webp" alt="">
         <h3>Air Hockey Online</h3>
       </a>
       <a href="products#life" class="item-box" data-category="card games">
-        <img src="images/products/pop-music.jpg" alt="">
+        <img src="\images\products\games\life cover.jpeg" alt="">
         <h3>life</h3>
       </a>
       <!-- Add more game items here -->
